update readme, add dconf-editor

--- a/README
+++ b/README
@@ -5,13 +5,12 @@ RHYTHMBOX FILEORGANIZER
 WARNING, ONGOING DEVELOPMENT VERSION.
 -------------------------------------
 
- * There are a lot of changes incoming as I haven't updated for a long time. (My last commit was Sep 16, 2013!)
  * Please be aware that for the moment this repo may have bugs
    that i haven't noticed in my testing.
  * I have tested all current features and they work as expected
    (But that isn't a promise it will be stable for you)
 
-Welcome to version 3.1-dev-01
+Welcome to version 3.1-dev-05
 
 This is my first update in a major refactor and cleanup of the code.
 My end goal is to make it easier for other people to read and understand how it works.
@@ -47,6 +46,7 @@ python3 -c "import depends_test; depends_test.check()"
 Possible extra requirements are:
  * python-configparser (I have to confim this but i think it's a default module in python 3.2+)
  * gir1.2-notify-0.7 (Debian name, GObject notify library)
+ * dconf-editor (to make changes to the rhythmbox library settings)
 
 #######################
 
@@ -148,6 +148,7 @@ Remove Empty Folders
  * Removed older v2.99 zip file
  * Removed INSTALL & UNINSTALL (these were just calls to make anyway)
  * Ongoing pylint/refactor changes.
+ * Update config window to remove depreciated widgets. (requires GTK+ 3.0)
 
 Update 2015/05/05:
  * added strip_ntfs option (Care of @sirfz)
